Fixed content overflowing

--- a/css/messages.css
+++ b/css/messages.css
@@ -1,6 +1,5 @@
-.btr-hide-ads .roblox-messages-container,
 .btr-hide-ads .content {
-	width:970px;
+	width: 970px;
 }
 
 body .btr-markAllAsReadInbox {
